firebase store with rea time update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Firebase Firestore</title>
   </head>
   <body>
-    <h1>Cloud Cafe</h1>
+    <h1>
+      Firestore <br />
+      Cloud Cafe
+    </h1>
 
     <div class="content">
       <form id="add-cafe-form">
